# ProgrammingQuotesAPI

./: .replit  README.md  app.py  db.sqlite3  main.py  pyproject.toml  quote_generator.py  requirements.txt
api/: urls.py  views.py
data/: quotes.json
quotes_api/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
static/js/: api-test.js
templates/: index.html  quote_generator.html
