[project]
name = "programming-quotes-api"
version = "0.1.0"
description = "A Flask-based API for programming quotes."
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3"
]

[tool.hatch.build.targets.sdist]
include = ["*"]

[tool.hatch.envs.default.scripts]
build = "python -m build"
start = "python app.py"